# learn-cmake

./: .gitignore  hello.cpp
basic-sample/: CMakeLists.txt
calculator/: CMakeLists.txt  README  hello.cpp
math-lib/: CMakeLists.txt
math-lib/include/: div.h
math-lib/src/: add.cpp  div.cpp  sub.cpp
